# pensy

./: README.md  package.json  pnpm-lock.yaml  shell.nix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data_manager/: commands.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.sql  triggerlist.txt
src-tauri/src/security/: file.rs  keys.rs  mod.rs
src-tauri/src/vault/: mod.rs
src/routes/: +page.svelte
